--- a/Gallery.html
+++ b/Gallery.html
@@ -38,10 +38,10 @@
                             <a class="nav-link " href="Product.html">Product</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" href="gallery.html">Gallery</a>
+                            <a class="nav-link active" href="Gallery.html">Gallery</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link " href="contact.html">Contact</a>
+                            <a class="nav-link " href="Contact.html">Contact</a>
                           </li>
                         </ul>
                         <div class="header_right">
