--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                         <a class="nav-link" href="Product.html">Product</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link " href="gallery.html">Gallery</a>
+                        <a class="nav-link " href="Gallery.html">Gallery</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link " href="contact.html">Contact</a>
+                        <a class="nav-link " href="Contact.html">Contact</a>
                       </li>
                     </ul>
                     <div class="header_right">
@@ -67,7 +67,7 @@
                               <h3>Fresh & Natural Farm Food</h3>
                               <p>The readable content of a page when looking at its layout point of using of letters,
                                   as opposed.</p>
-                              <a href="product.html" class="button">ALL PRoducts</a>
+                              <a href="Product.html" class="button">ALL PRoducts</a>
                           </div>
                       </div>
                   </div>
@@ -79,7 +79,7 @@
                             <h3>Fresh & Natural Farm Food</h3>
                             <p>The readable content of a page when looking at its layout point of using of letters,
                            .</p>
-                            <a href="product.html" class="button">ALL PRoducts</a>
+                            <a href="Product.html" class="button">ALL PRoducts</a>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
             <span>$78</span>
           </div>
           <div class="product_detail">
-            <a href="product.html" class="button">View Products</a>
+            <a href="Product.html" class="button">View Products</a>
           </div>
         </div>
       </div>
@@ -215,7 +215,7 @@
             <span>$78</span>
           </div>
           <div class="product_detail">
-            <a href="product.html" class="button">View Products</a>
+            <a href="Product.html" class="button">View Products</a>
           </div>
         </div>
       </div>
@@ -230,7 +230,7 @@
             <span>$78</span>
           </div>
           <div class="product_detail">
-            <a href="product.html" class="button">View Products</a>
+            <a href="Product.html" class="button">View Products</a>
           </div>
         </div>
       </div>
@@ -244,7 +244,7 @@
             <span>$78</span>
           </div>
           <div class="product_detail">
-            <a href="product.html" class="button">View Products</a>
+            <a href="Product.html" class="button">View Products</a>
           </div>
         </div>
       </div>
