--- a/Contact.html
+++ b/Contact.html
@@ -37,10 +37,10 @@
                             <a class="nav-link " href="Product.html">Product</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link " href="gallery.html">Gallery</a>
+                            <a class="nav-link " href="Gallery.html">Gallery</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" href="contact.html">Contact</a>
+                            <a class="nav-link active" href="Contact.html">Contact</a>
                           </li>
                         </ul>
                         <div class="header_right">
